Image+sticky title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
+<!DOCTYPE html>
 <html>
-  <head>LE CACA</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <title>Stage Louis</title>
+  </head>
   <body>
-
+    <div class="sticky">
+      <h1 class="Dongle white bgblack size50 centre">Rapport De Stage Louis Stanisalwek 3°G</h1>
+    </div>
+    <img src="https://basiclabs.fr/logo-basic.png" width="600px" height="200px" class="marginauto">
+    <div class="container">
+      <h2 class="size50 Dongle">Sommaire</h2>
+      <ul class="Dongle">
+        <li class="size30">Présentation de l'entreprise</li>
+        <li class="size30">Mes activités dans l'entreprise</li>
+        <li class="size30">Métiers de l'entreprise</li>
+        <li class="size30">Bilan du stage</li>
+        <li class="size30">Annexes</li>
+      </ul>
+      <h1 class="Dongle size50">Présentation de l'entreprise</h1>
+      <h2 class="Dongle size30">10 lignes</h2>
+      <h1 class="Dongle size50">Mes activités dans l'entreprise</h1>
+      <h2 class="Dongle size30">.................</h2>
+      <h1 class="Dongle size50">Métiers de l'entreprise</h1>
+      <h2 class="Dongle size30">.................</h2>
+      <h1 class="Dongle size50">Bilan du stage</h1>
+      <h2 class="Dongle size30">.................</h2>
+      <h1 class="Dongle size50">Annexes</h1>
+      <h2 class="Dongle size30">.................</h2>
+    </div>
   </body>
 </html>
