css rapport de stage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <img src="https://basiclabs.fr/logo-basic.png" width="600px" height="200px" class="marginauto">
     <div class="container">
-      <h2 class="size50 Dongle">Sommaire</h2>
+      <h2 class="size50 Dongle red">Sommaire</h2>
       <ul class="Dongle">
         <li class="size40">Introduction</li>
         <li class="size40">L'Entreprise</li>
